[gd_scene load_steps=6 format=3 uid="uid://b00kh2h5kbxj1"]

[ext_resource type="Script" uid="uid://brc20ms50tw2o" path="res://scenes/game/market.gd" id="1_hpopc"]
[ext_resource type="PackedScene" uid="uid://cs0ie4yghnk43" path="res://scenes/menu/gui.tscn" id="2_cn1e3"]
[ext_resource type="Script" uid="uid://c78aofn4rjquj" path="res://scenes/game/selling_system.gd" id="3_cn1e3"]
[ext_resource type="Script" uid="uid://52rfga556q4" path="res://scenes/game/market_zones.gd" id="3_s7log"]
[ext_resource type="Texture2D" uid="uid://b2dg1b6dem85w" path="res://assets/sprites/sakuya.png" id="5_fwmry"]

[node name="Market" type="Node2D"]
script = ExtResource("1_hpopc")

[node name="MarketZones" type="Node2D" parent="."]
script = ExtResource("3_s7log")

[node name="gotoMine" type="RayCast2D" parent="MarketZones"]
target_position = Vector2(0, 1500)

[node name="gotoWorkshop" type="RayCast2D" parent="MarketZones"]
target_position = Vector2(0, 1500)

[node name="SellingSystem" type="Node2D" parent="."]
script = ExtResource("3_cn1e3")

[node name="GUI" parent="SellingSystem" instance=ExtResource("2_cn1e3")]

[node name="CardSale" type="Node2D" parent="SellingSystem"]
position = Vector2(256, 256)

[node name="Buttons" type="Node2D" parent="SellingSystem/CardSale"]

[node name="AddRem" type="GridContainer" parent="SellingSystem/CardSale/Buttons"]
offset_right = 138.0
offset_bottom = 171.0
columns = 3

[node name="addXs" type="Button" parent="SellingSystem/CardSale/Buttons/AddRem"]
layout_mode = 2
text = "+"

[node name="remXs" type="Button" parent="SellingSystem/CardSale/Buttons/AddRem"]
layout_mode = 2
text = "-"

[node name="Xs" type="Label" parent="SellingSystem/CardSale/Buttons/AddRem"]
layout_mode = 2
text = "Lesser card"

[node name="addS" type="Button" parent="SellingSystem/CardSale/Buttons/AddRem"]
layout_mode = 2
text = "+"

[node name="remS" type="Button" parent="SellingSystem/CardSale/Buttons/AddRem"]
layout_mode = 2
text = "-"

[node name="S" type="Label" parent="SellingSystem/CardSale/Buttons/AddRem"]
layout_mode = 2
text = "Card"

[node name="addM" type="Button" parent="SellingSystem/CardSale/Buttons/AddRem"]
layout_mode = 2
text = "+"

[node name="remM" type="Button" parent="SellingSystem/CardSale/Buttons/AddRem"]
layout_mode = 2
text = "-"

[node name="M" type="Label" parent="SellingSystem/CardSale/Buttons/AddRem"]
layout_mode = 2
text = "Greater card"

[node name="addL" type="Button" parent="SellingSystem/CardSale/Buttons/AddRem"]
layout_mode = 2
text = "+"

[node name="remL" type="Button" parent="SellingSystem/CardSale/Buttons/AddRem"]
layout_mode = 2
text = "-"

[node name="L" type="Label" parent="SellingSystem/CardSale/Buttons/AddRem"]
layout_mode = 2
text = "Special card"

[node name="addXl" type="Button" parent="SellingSystem/CardSale/Buttons/AddRem"]
layout_mode = 2
text = "+"

[node name="remXl" type="Button" parent="SellingSystem/CardSale/Buttons/AddRem"]
layout_mode = 2
text = "-"

[node name="Xl" type="Label" parent="SellingSystem/CardSale/Buttons/AddRem"]
layout_mode = 2
text = "Quest card"

[node name="Sell" type="Button" parent="SellingSystem/CardSale/Buttons"]
offset_top = 160.0
offset_right = 64.0
offset_bottom = 192.0
text = "Sell"

[node name="HiLo" type="Button" parent="SellingSystem/CardSale/Buttons"]
offset_top = 192.0
offset_right = 64.0
offset_bottom = 224.0
text = "HiLo"

[node name="Blackjack" type="Button" parent="SellingSystem/CardSale/Buttons"]
offset_top = 224.0
offset_right = 64.0
offset_bottom = 256.0
text = "Black"

[node name="Bartering" type="Node2D" parent="SellingSystem"]

[node name="Cashout" type="Button" parent="SellingSystem/Bartering"]
offset_left = 18000.0
offset_top = 6000.0
offset_right = 18032.0
offset_bottom = 6032.0

[node name="HigherLower" type="Node2D" parent="SellingSystem/Bartering"]
position = Vector2(9000, 3000)

[node name="Higher" type="Button" parent="SellingSystem/Bartering/HigherLower"]
offset_right = 32.0
offset_bottom = 32.0
text = "+"

[node name="Lower" type="Button" parent="SellingSystem/Bartering/HigherLower"]
offset_top = 32.0
offset_right = 32.0
offset_bottom = 64.0
text = "-"

[node name="Card1" type="Label" parent="SellingSystem/Bartering/HigherLower"]
offset_left = 32.0
offset_right = 72.0
offset_bottom = 23.0

[node name="Card2" type="Label" parent="SellingSystem/Bartering/HigherLower"]
offset_left = 32.0
offset_top = 32.0
offset_right = 72.0
offset_bottom = 55.0

[node name="Sakuya" type="Sprite2D" parent="SellingSystem/Bartering/HigherLower"]
position = Vector2(-400, 0)
texture = ExtResource("5_fwmry")
centered = false

[node name="Blackjack" type="Node2D" parent="SellingSystem/Bartering"]
position = Vector2(9000, 3000)

[node name="Hit" type="Button" parent="SellingSystem/Bartering/Blackjack"]
offset_right = 112.0
offset_bottom = 32.0
text = "Hit"

[node name="DDown" type="Button" parent="SellingSystem/Bartering/Blackjack"]
offset_top = 32.0
offset_right = 112.0
offset_bottom = 64.0
text = "Double down"

[node name="Stand" type="Button" parent="SellingSystem/Bartering/Blackjack"]
offset_top = 64.0
offset_right = 112.0
offset_bottom = 96.0
text = "Stand"

[node name="PlayerNb" type="Label" parent="SellingSystem/Bartering/Blackjack"]
offset_left = 120.0
offset_right = 152.0
offset_bottom = 32.0

[node name="OpponentNb" type="Label" parent="SellingSystem/Bartering/Blackjack"]
offset_left = 120.0
offset_top = 32.0
offset_right = 152.0
offset_bottom = 64.0

[connection signal="pressed" from="SellingSystem/CardSale/Buttons/AddRem/addXs" to="SellingSystem" method="_on_add_xs_pressed"]
[connection signal="pressed" from="SellingSystem/CardSale/Buttons/AddRem/remXs" to="SellingSystem" method="_on_rem_xs_pressed"]
[connection signal="pressed" from="SellingSystem/CardSale/Buttons/AddRem/addS" to="SellingSystem" method="_on_add_s_pressed"]
[connection signal="pressed" from="SellingSystem/CardSale/Buttons/AddRem/remS" to="SellingSystem" method="_on_rem_s_pressed"]
[connection signal="pressed" from="SellingSystem/CardSale/Buttons/AddRem/addM" to="SellingSystem" method="_on_add_m_pressed"]
[connection signal="pressed" from="SellingSystem/CardSale/Buttons/AddRem/remM" to="SellingSystem" method="_on_rem_m_pressed"]
[connection signal="pressed" from="SellingSystem/CardSale/Buttons/AddRem/addL" to="SellingSystem" method="_on_add_l_pressed"]
[connection signal="pressed" from="SellingSystem/CardSale/Buttons/AddRem/remL" to="SellingSystem" method="_on_rem_l_pressed"]
[connection signal="pressed" from="SellingSystem/CardSale/Buttons/AddRem/addXl" to="SellingSystem" method="_on_add_xl_pressed"]
[connection signal="pressed" from="SellingSystem/CardSale/Buttons/AddRem/remXl" to="SellingSystem" method="_on_rem_xl_pressed"]
[connection signal="pressed" from="SellingSystem/CardSale/Buttons/Sell" to="SellingSystem" method="_on_sell_pressed"]
[connection signal="pressed" from="SellingSystem/CardSale/Buttons/HiLo" to="SellingSystem" method="_on_hi_lo_pressed"]
[connection signal="pressed" from="SellingSystem/CardSale/Buttons/Blackjack" to="SellingSystem" method="_on_blackjack_pressed"]
[connection signal="pressed" from="SellingSystem/Bartering/Cashout" to="SellingSystem" method="_on_cashout_pressed"]
[connection signal="pressed" from="SellingSystem/Bartering/HigherLower/Higher" to="SellingSystem" method="_on_higher_pressed"]
[connection signal="pressed" from="SellingSystem/Bartering/HigherLower/Lower" to="SellingSystem" method="_on_lower_pressed"]
[connection signal="pressed" from="SellingSystem/Bartering/Blackjack/Hit" to="SellingSystem" method="_on_hit_pressed"]
[connection signal="pressed" from="SellingSystem/Bartering/Blackjack/DDown" to="SellingSystem" method="_on_d_down_pressed"]
[connection signal="pressed" from="SellingSystem/Bartering/Blackjack/Stand" to="SellingSystem" method="_on_stand_pressed"]
